Fix flicker bug

--- a/src/components/Panels/AboutPanel/TextCard/TextCard.module.scss
+++ b/src/components/Panels/AboutPanel/TextCard/TextCard.module.scss
@@ -2,6 +2,7 @@
 @import '../../../styles/typography.scss';
 
 .textCardContainer {
+    @extend .fadeIn;
     display: flex;
     align-items: center;
     padding: 0px 20px;
@@ -28,12 +29,6 @@
         max-width: 100%;
         width: auto;
     }
-
-    // @media only screen and (max-width : 770px) {
-    //     max-width: 100%;
-    //     width: auto;
-    //     order: 2;
-    // }
 
     .navButton {
         background-color: rgba(0, 0, 0, 0.8);
